--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'data/train.tsv' successfully downloaded\n",
-      "File 'data/validation.tsv' successfully downloaded\n",
-      "File 'data/test.tsv' successfully downloaded\n",
-      "File 'data/text_prepare_tests.tsv' successfully downloaded\n"
+      "File data/train.tsv is already downloaded.\n",
+      "File data/validation.tsv is already downloaded.\n",
+      "File data/test.tsv is already downloaded.\n",
+      "File data/text_prepare_tests.tsv is already downloaded.\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/BhavikaJalli/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -130,19 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from ast import literal_eval\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
