--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -169,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 2)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train.head()"
    ]
@@ -186,6 +195,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Warning: mysql_query() expects parameter 2 to ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>get click coordinates from &lt;input type='image'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>How to implement cloud storage for media asset...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What is catcomplete in jQuery's autocomplete p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Error building Android app with Cordova 3.1 CLI</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title\n",
+       "0  Warning: mysql_query() expects parameter 2 to ...\n",
+       "1  get click coordinates from <input type='image'...\n",
+       "2  How to implement cloud storage for media asset...\n",
+       "3  What is catcomplete in jQuery's autocomplete p...\n",
+       "4    Error building Android app with Cordova 3.1 CLI"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,15 +275,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['How to draw a stacked dotplot in R?',\n",
+       "       'mysql select all records where a datetime field is less than a specified value',\n",
+       "       'How to terminate windows phone 8.1 app', ...,\n",
+       "       'Python Pandas Series of Datetimes to Seconds Since the Epoch',\n",
+       "       'jqGrid issue grouping - Duplicate rows get appended every time sort is changed',\n",
+       "       'Create a List of primitive int?'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, y_train = train['title'].values, train['tags'].values\n",
     "X_val, y_val = validation['title'].values, validation['tags'].values\n",
-    "X_test = test['title'].values"
+    "X_test = test['title'].values\n",
+    "X_train"
    ]
   },
   {
@@ -216,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -227,10 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 105,
+   "metadata": {},
    "outputs": [],
    "source": [
     "REPLACE_BY_SPACE_RE = re.compile('[/(){}\\[\\]\\|@,;]')\n",
@@ -243,16 +337,37 @@
     "        \n",
     "        return: modified initial string\n",
     "    \"\"\"\n",
-    "    text = # lowercase text\n",
-    "    text = # replace REPLACE_BY_SPACE_RE symbols by space in text\n",
-    "    text = # delete symbols which are in BAD_SYMBOLS_RE from text\n",
-    "    text = # delete stopwords from text\n",
-    "    return text"
+    "    text = text.lower() # lowercase text\n",
+    "    text = re.sub(REPLACE_BY_SPACE_RE,' ', text) # replace REPLACE_BY_SPACE_RE symbols by space in text\n",
+    "    text = re.sub(BAD_SYMBOLS_RE,'', text) # delete symbols which are in BAD_SYMBOLS_RE from text\n",
+    "    text = [word for word in text.split(\" \") if word not in STOPWORDS] # delete stopwords from text\n",
+    "    text = \" \".join(text).split()\n",
+    "    return \" \".join(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'23'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_prepare('23')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -264,6 +379,7 @@
     "    answers = [\"sql server equivalent excels choose function\", \n",
     "               \"free c++ memory vectorint arr\"]\n",
     "    for ex, ans in zip(examples, answers):\n",
+    "        #print(text_prepare(ex))\n",
     "        if text_prepare(ex) != ans:\n",
     "            return \"Wrong answer for the case: '%s'\" % ex\n",
     "    return 'Basic tests are passed.'"
@@ -271,11 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic tests are passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_text_prepare())"
    ]
@@ -289,11 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current answer for task TextPrepare is:\n",
+      " sqlite php readonly\n",
+      "creating multiple textboxes dynamically\n",
+      "self one prefer javascript\n",
+      "save php date...\n"
+     ]
+    }
+   ],
    "source": [
     "prepared_questions = []\n",
     "for line in open('data/text_prepare_tests.tsv', encoding='utf-8'):\n",
@@ -313,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -326,11 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['draw stacked dotplot r',\n",
+       " 'mysql select records datetime field less specified value',\n",
+       " 'terminate windows phone 81 app']"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train[:3]"
    ]
@@ -352,6 +495,7 @@
    },
    "outputs": [],
    "source": [
+    "#X_train and y_train\n",
     "# Dictionary of all tags from train corpus with their counts.\n",
     "tags_counts = {}\n",
     "# Dictionary of all words from train corpus with their counts.\n",
@@ -359,6 +503,8 @@
     "\n",
     "######################################\n",
     "######### YOUR CODE HERE #############\n",
+    "\n",
+    "\n",
     "######################################"
    ]
   },
