--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -489,10 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 126,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#X_train and y_train\n",
@@ -503,7 +501,20 @@
     "\n",
     "######################################\n",
     "######### YOUR CODE HERE #############\n",
+    "for tag_list in y_train:\n",
+    "    for tag in tag_list:\n",
+    "        if tag in tags_counts:\n",
+    "            tags_counts[tag] += 1\n",
+    "        else:\n",
+    "            tags_counts[tag] = 1\n",
     "\n",
+    "for word_list in X_train:\n",
+    "    words = word_list.split(\" \")\n",
+    "    for word in words:\n",
+    "        if word in words_counts:\n",
+    "            words_counts[word] += 1\n",
+    "        else:\n",
+    "            words_counts[word] = 1\n",
     "\n",
     "######################################"
    ]
@@ -522,17 +533,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current answer for task WordsTagsCount is:\n",
+      " javascript,c#,java\n",
+      "using,php,java...\n"
+     ]
+    }
+   ],
    "source": [
     "most_common_tags = sorted(tags_counts.items(), key=lambda x: x[1], reverse=True)[:3]\n",
     "most_common_words = sorted(words_counts.items(), key=lambda x: x[1], reverse=True)[:3]\n",
     "\n",
     "grader.submit_tag('WordsTagsCount', '%s\\n%s' % (','.join(tag for tag, _ in most_common_tags), \n",
     "                                                ','.join(word for word, _ in most_common_words)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print()"
    ]
   },
   {
