--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -555,17 +555,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -612,15 +601,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 150,
+   "metadata": {},
    "outputs": [],
    "source": [
     "DICT_SIZE = 5000\n",
-    "WORDS_TO_INDEX = ####### YOUR CODE HERE #######\n",
-    "INDEX_TO_WORDS = ####### YOUR CODE HERE #######\n",
+    "#Finding the 5000 most common words\n",
+    "most_common_words = sorted(words_counts.items(), key=lambda x: x[1], reverse=True)[:DICT_SIZE]\n",
+    "common_words = (','.join(word for word, _ in most_common_words))\n",
+    "WORDS_TO_INDEX = {}\n",
+    "INDEX_TO_WORDS = {}\n",
+    "i = 0\n",
+    "for word in common_words.split(','):\n",
+    "    WORDS_TO_INDEX[word] = i\n",
+    "    INDEX_TO_WORDS[i] = word\n",
+    "    i += 1\n",
+    "#print(INDEX_TO_WORDS)\n",
     "ALL_WORDS = WORDS_TO_INDEX.keys()\n",
     "\n",
     "def my_bag_of_words(text, words_to_index, dict_size):\n",
@@ -633,13 +629,40 @@
     "    result_vector = np.zeros(dict_size)\n",
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
+    "    words = text.split(\" \")\n",
+    "    for word in words:\n",
+    "        if word in words_to_index:\n",
+    "            result_vector[words_to_index[word]] +=1\n",
+    "    \n",
     "    ######################################\n",
+    "    #print(result_vector)\n",
     "    return result_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  1.,  0.,  1.])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words_to_index = {'hi': 0, 'you': 1, 'me': 2, 'are': 3}\n",
+    "my_bag_of_words('hi how are you',words_to_index, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -657,11 +680,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic tests are passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_my_bag_of_words())"
    ]
@@ -675,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -686,11 +715,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape  (100000, 5000)\n",
+      "X_val shape  (30000, 5000)\n",
+      "X_test shape  (20000, 5000)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_mybag = sp_sparse.vstack([sp_sparse.csr_matrix(my_bag_of_words(text, WORDS_TO_INDEX, DICT_SIZE)) for text in X_train])\n",
     "X_val_mybag = sp_sparse.vstack([sp_sparse.csr_matrix(my_bag_of_words(text, WORDS_TO_INDEX, DICT_SIZE)) for text in X_val])\n",
@@ -723,7 +760,7 @@
    "outputs": [],
    "source": [
     "row = X_train_mybag[10].toarray()[0]\n",
-    "non_zero_elements_count = ####### YOUR CODE HERE #######\n",
+    "non_zero_elements_count = []\n",
     "\n",
     "grader.submit_tag('BagOfWords', str(non_zero_elements_count))"
    ]
