--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -753,14 +753,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "Current answer for task BagOfWords is:\n",
+      " 7...\n"
+     ]
+    }
+   ],
    "source": [
     "row = X_train_mybag[10].toarray()[0]\n",
-    "non_zero_elements_count = []\n",
+    "non_zero_elements_count = np.count_nonzero(row)\n",
+    "print(non_zero_elements_count)\n",
     "\n",
     "grader.submit_tag('BagOfWords', str(non_zero_elements_count))"
    ]
@@ -778,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
     "collapsed": true
    },
@@ -789,7 +798,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(min_df = 5,max_df = 0.9, ngram_range = (1,2))\n",
+    "features = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_tra = pd.DataFrame(features.todense(),columns =tfidf_vectorizer.get_feature_names())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
    "metadata": {
     "collapsed": true
    },
@@ -804,11 +826,17 @@
     "    # Fit the vectorizer on the train set\n",
     "    # Transform the train, test, and val sets and return the result\n",
     "    \n",
-    "    \n",
-    "    tfidf_vectorizer = ####### YOUR CODE HERE #######\n",
+    "    tfidf_vectorizer = TfidfVectorizer(min_df = 5,max_df = 0.9, ngram_range = (1,2),token_pattern='(\\S+)')\n",
     "    \n",
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
+    "    features = tfidf_vectorizer.fit_transform(X_train)\n",
+    "    features_val = tfidf_vectorizer.transform(X_val)\n",
+    "    features_test = tfidf_vectorizer.transform(X_test)\n",
+    "    \n",
+    "    X_train = pd.DataFrame(features.todense(),columns =tfidf_vectorizer.get_feature_names())\n",
+    "    X_val = pd.DataFrame(features_val.todense(),columns =tfidf_vectorizer.get_feature_names())\n",
+    "    X_test = pd.DataFrame(features_test.todense(),columns =tfidf_vectorizer.get_feature_names())\n",
     "    ######################################\n",
     "    \n",
     "    return X_train, X_val, X_test, tfidf_vectorizer.vocabulary_"
@@ -825,10 +853,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 182,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train_tfidf, X_val_tfidf, X_test_tfidf, tfidf_vocab = tfidf_features(X_train, X_val, X_test)\n",
@@ -837,13 +863,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c++ and c# are present in the vocab\n",
+      "c++ and c# are present in the vocab\n"
+     ]
+    }
+   ],
    "source": [
-    "######### YOUR CODE HERE #############"
+    "######### YOUR CODE HERE #############\n",
+    "flag = 0\n",
+    "for key in tfidf_vocab:\n",
+    "    if key == 'c++' or key == 'c#':\n",
+    "        flag = 1\n",
+    "        print('c++ and c# are present in the vocab')\n",
+    "if flag == 0:\n",
+    "    print('Not Found')"
    ]
   },
   {
@@ -868,7 +908,8 @@
    },
    "outputs": [],
    "source": [
-    "######### YOUR CODE HERE #############"
+    "######### YOUR CODE HERE #############\n",
+    "#After using the transformation the token c and c++ were found"
    ]
   },
   {
