--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 440,
    "metadata": {
     "collapsed": true
    },
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -1498,24 +1498,24 @@
      "output_type": "stream",
      "text": [
       "Tag:\tc\n",
-      "Top positive words:\tcall variable, method controller, send parameter, python, get twitter\n",
-      "Top negative words:\tcalling php, jquery onclick, rail create, plot multiple, javascript getting\n",
+      "Top positive words:\tc, malloc, php call, fscanf, calling c#\n",
+      "Top negative words:\tnsstring, according, swift, begin, php\n",
       "\n",
       "Tag:\tc++\n",
-      "Top positive words:\tcant update, read socket, c# excel, multiple definition, panda series\n",
-      "Top negative words:\tcalling php, jquery onclick, rail create, plot multiple, javascript getting\n",
+      "Top positive words:\tc++, boost, stdstring, mfc, stl\n",
+      "Top negative words:\tjquery, c++ stl, php, java, canvas\n",
       "\n",
       "Tag:\tlinux\n",
-      "Top positive words:\tloop java, upper, call variable, androidviewinflateexception binary, specific part\n",
-      "Top negative words:\tmouse cursor, async task, keyup event, calling php, jquery onclick\n",
+      "Top positive words:\tlinux, kernel space, calling php, load module, simple calculator\n",
+      "Top negative words:\tjavascript, attribute, nokogiri, codeigniter, aspnet\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print_words_for_tag(classifier_tfidf, 'c', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)\n",
-    "print_words_for_tag(classifier_tfidf, 'c++', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)\n",
-    "print_words_for_tag(classifier_tfidf, 'linux', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)"
+    "print_words_for_tag(model, 'c', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)\n",
+    "print_words_for_tag(model, 'c++', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)\n",
+    "print_words_for_tag(model, 'linux', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)"
    ]
   },
   {
@@ -1528,43 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You want to submit these parts:\n",
-      "Task TextPrepare:\n",
-      " sqlite php readonly\n",
-      "creating multiple textboxes dynamically\n",
-      "self one prefer javascript\n",
-      "save php date...\n",
-      "Task WordsTagsCount:\n",
-      " javascript,c#,java\n",
-      "using,file,php...\n",
-      "Task BagOfWords:\n",
-      " 7...\n",
-      "Task MultilabelClassification:\n",
-      " 0\tmysql,php\n",
-      "1\tjavascript\n",
-      "2\t\n",
-      "3\tjavascript,jquery\n",
-      "4\tandroid,java\n",
-      "5\tphp,xml\n",
-      "6\tjson,web-services\n",
-      "7\tjava,...\n"
-     ]
-    }
-   ],
-   "source": [
-    "grader.status()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -1584,19 +1548,53 @@
       " 7...\n",
       "Task MultilabelClassification:\n",
       " 0\tmysql,php\n",
-      "1\tjavascript\n",
+      "1\thtml,javascript\n",
       "2\t\n",
       "3\tjavascript,jquery\n",
-      "4\tandroid,java\n",
+      "4\tandroid\n",
       "5\tphp,xml\n",
-      "6\tjson,web-services\n",
-      "7\tjava,...\n"
+      "6\tasp.net,json,ruby-on-rail...\n"
+     ]
+    }
+   ],
+   "source": [
+    "grader.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You want to submit these parts:\n",
+      "Task TextPrepare:\n",
+      " sqlite php readonly\n",
+      "creating multiple textboxes dynamically\n",
+      "self one prefer javascript\n",
+      "save php date...\n",
+      "Task WordsTagsCount:\n",
+      " javascript,c#,java\n",
+      "using,php,java...\n",
+      "Task BagOfWords:\n",
+      " 7...\n",
+      "Task MultilabelClassification:\n",
+      " 0\tmysql,php\n",
+      "1\thtml,javascript\n",
+      "2\t\n",
+      "3\tjavascript,jquery\n",
+      "4\tandroid\n",
+      "5\tphp,xml\n",
+      "6\tasp.net,json,ruby-on-rail...\n"
      ]
     }
    ],
    "source": [
     "STUDENT_EMAIL = 'bhavikaj@umich.edu' # EMAIL \n",
-    "STUDENT_TOKEN = 'XZcyxWafK4BvwBuk' # TOKEN \n",
+    "STUDENT_TOKEN = 'K1DG2Bo0YEMosIfO' # TOKEN \n",
     "grader.status()"
    ]
   },
@@ -1609,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
