--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -42,11 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'data/train.txt' successfully downloaded\n",
+      "File 'data/validation.txt' successfully downloaded\n",
+      "File 'data/test.txt' successfully downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -928,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
