--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -103,6 +103,10 @@
     "\n",
     "            ######################################\n",
     "            ######### YOUR CODE HERE #############\n",
+    "            if token[0] == '@':\n",
+    "                token = '<USR>'\n",
+    "            if token[:7] == 'http://' or token[:8] == 'https://':\n",
+    "                token = '<URL>'\n",
     "            ######################################\n",
     "            \n",
     "            tweet_tokens.append(token)\n",
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -135,6 +139,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Apple',\n",
+       " 'MacBook',\n",
+       " 'Pro',\n",
+       " 'A1278',\n",
+       " '13.3',\n",
+       " '\"',\n",
+       " 'Laptop',\n",
+       " '-',\n",
+       " 'MD101LL/A',\n",
+       " '(',\n",
+       " 'June',\n",
+       " ',',\n",
+       " '2012',\n",
+       " ')',\n",
+       " '-',\n",
+       " 'Full',\n",
+       " 'read',\n",
+       " 'by',\n",
+       " 'eBay',\n",
+       " '<URL>',\n",
+       " '<URL>']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_tokens[1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,11 +187,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RT\tO\n",
+      "<USR>\tO\n",
+      ":\tO\n",
+      "Online\tO\n",
+      "ticket\tO\n",
+      "sales\tO\n",
+      "for\tO\n",
+      "Ghostland\tB-musicartist\n",
+      "Observatory\tI-musicartist\n",
+      "extended\tO\n",
+      "until\tO\n",
+      "6\tO\n",
+      "PM\tO\n",
+      "EST\tO\n",
+      "due\tO\n",
+      "to\tO\n",
+      "high\tO\n",
+      "demand\tO\n",
+      ".\tO\n",
+      "Get\tO\n",
+      "them\tO\n",
+      "before\tO\n",
+      "they\tO\n",
+      "sell\tO\n",
+      "out\tO\n",
+      "...\tO\n",
+      "\n",
+      "Apple\tB-product\n",
+      "MacBook\tI-product\n",
+      "Pro\tI-product\n",
+      "A1278\tI-product\n",
+      "13.3\tI-product\n",
+      "\"\tI-product\n",
+      "Laptop\tI-product\n",
+      "-\tI-product\n",
+      "MD101LL/A\tI-product\n",
+      "(\tO\n",
+      "June\tO\n",
+      ",\tO\n",
+      "2012\tO\n",
+      ")\tO\n",
+      "-\tO\n",
+      "Full\tO\n",
+      "read\tO\n",
+      "by\tO\n",
+      "eBay\tB-company\n",
+      "<URL>\tO\n",
+      "<URL>\tO\n",
+      "\n",
+      "Happy\tO\n",
+      "Birthday\tO\n",
+      "<USR>\tO\n",
+      "!\tO\n",
+      "May\tO\n",
+      "Allah\tB-person\n",
+      "s.w.t\tO\n",
+      "bless\tO\n",
+      "you\tO\n",
+      "with\tO\n",
+      "goodness\tO\n",
+      "and\tO\n",
+      "happiness\tO\n",
+      ".\tO\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "    for token, tag in zip(train_tokens[i], train_tags[i]):\n",
